--- a/src/main/resources/web/templates/directives/headerMenu.html
+++ b/src/main/resources/web/templates/directives/headerMenu.html
@@ -23,30 +23,30 @@
 
 <!-- Connected -->
 <nav class="top-nav grey lighten-3" role="navigation" ng-show="user">    
-    <div class="container-fluid">
+    <div class="container">
         <div class="nav-wrapper" >
-            <form class="left">
-                <div class="input-field  pink">
-                    <input id="search" type="search" required>
-                    <label for="search"><i class="mdi-action-search"></i></label>
-                    <i class="mdi-navigation-close"></i>
-                </div>
-            </form>
+            
+            <a href="#" class="brand-logo grey-text text-lighten-1 center">{{structure.label}}</a>
 
-            <a href="#" class="brand-logo">{{structure.label}}</a>
-
-            <ul class="right hide-on-med-and-down">
-                <li><a href="#/private/profil">{{user.firstname}} {{user.name}}</li>
-                <li><a ng-click="logoff()"><span class="fa fa-power-off"></span></a></li>
+            <ul class="hide-on-med-and-down">
+                <li><a href="#/private/profil"><span class="grey-text text-lighten-1">{{user.firstname}} {{user.name}}</span></li>
+                <li><a ng-click="logoff()"><i class="grey-text text-lighten-1 fa fa-power-off right"></i></a></li>
             </ul>
             
-            <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+            <a href="#" data-activates="nav-mobile" class="button-collapse grey-text text-lighten-1"><i class="mdi-navigation-menu"></i></a>
             
             <ul id="nav-mobile" class="side-nav">
-                <li><a ng-click="logoff()"><span class="fa fa-power-off"></span></a></li>
+                <li><a ng-click="logoff()"><i class="grey-text text-lighten-1 fa fa-power-off"></i></a></li>
             </ul>
             
         </div>
+        <form class="right">
+            <div class="input-field  pink">
+                <input id="search" type="search" required>
+                <label for="search"><i class="mdi-action-search"></i></label>
+                <i class="mdi-navigation-close"></i>
+            </div>
+        </form>
     </div>
 </nav>
 
@@ -58,10 +58,9 @@
             <span translate="content.login.label.title"></span>
         </h5>
     </div>
-    
-    <div class="modal-content grey lighten-3 ">
-        <div class="row">
-            <form class="col s12">
+    <form class="col s12" ng-submit="login()">
+        <div class="modal-content grey lighten-3 ">
+            <div class="row">
                 <div class="input-field col s12">
                     <input placeholder="{{'content.login.ph.login' | translate }}" id="login" type="text" class="validate" ng-model="signin.login">
                     <label for="login">{{'content.login.ph.login' | translate }}</label>
@@ -70,12 +69,12 @@
                   <input placeholder="{{'content.login.ph.password' | translate }}" id="password" type="password" class="validate" ng-model="signin.passwd">
                   <label for="password">{{'content.login.ph.password' | translate }}</label>
                 </div>
-            </form>
-        </div>    
-    </div>
+            </div>    
+        </div>
     
-    <div class="modal-footer">
-        <a href="#!" class="modal-action modal-close waves-effect waves-red btn teal">{{'popup.buttons.submit' | translate}}</a>&nbsp;
-        <a href="#!" class="modal-action modal-close waves-effect waves-red btn red">{{'popup.buttons.cancel' | translate}}</a>    
-    </div>
+        <div class="modal-footer">
+            <input type="submit" class="modal-action modal-close waves-effect waves-red btn teal" translate="popup.buttons.submit" />
+            <a href="#!" class="modal-action modal-close waves-effect waves-red btn red">{{'popup.buttons.cancel' | translate}}</a>    
+        </div>
+    </form>
 </div>
