--- a/src/main/resources/web/templates/directives/headerMenu.html
+++ b/src/main/resources/web/templates/directives/headerMenu.html
@@ -13,7 +13,7 @@
             <a href="#" data-activates="nav-mobileHC" class="button-collapse grey-text text-lighten-1"><i class="mdi-navigation-menu"></i></a>
             
             <ul id="nav-mobileHC" class="side-nav">
-                <li><a href="#modalLogin" class="grey-text text-lighten-1 modal-trigger"><i class="fa fa-sign-in right"></i>{{'navbar.connect' | translate}}</a></li>
+                <li><a href="#modalLogin" class="grey-text text-lighten-1 modal-trigger"><i class="fa fa-sign-in left"></i>{{'navbar.connect' | translate}}</a></li>
             </ul>
         </div>
     </div>
@@ -26,47 +26,61 @@
     <div class="container">
         <div class="nav-wrapper">
             
-            <a href="#" class="brand-logo orange-text text-accent-4 center s12">{{structure.label}}</a>
+            <!-- Dropdown Structure -->
+            <ul id="dropdownSearch" class="dropdown-content">
+                <li><a href="#/private/" class="red-text text-lighten-1 tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-event' | translate }}">
+                    <i class="fa fa-calendar center"></i></a>
+                </li>
+                <li class="divider red darken-4" ></li>
+                <li><a href="#/private/" class="red-text text-lighten-1 tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-player' | translate }}">
+                    <i class="mdi-social-person center"></i></a>
+                </li>
+            </ul>
 
-            <ul class="right s6">
+            <a href="#" class="brand-logo red-text text-lighten-1 center"><small>{{structure.label}}</small></a>
+
+            <ul class="left hide-on-med-and-down red">
+                <li><a class="dropdown-button white-text light" href="#/private/" data-activates="dropdownSearch"><i class="mdi-action-search left"></i>{{'headerMenu.search' | translate }}</a></li>
+            </ul>
+            <ul class="right hide-on-med-and-down">
                 <li><a ng-click="logoff()"><i class="grey-text text-lighten-1 fa fa-power-off right"></i></a></li>
             </ul>
-            <ul class="right s6">
+            <ul class="right hide-on-med-and-down">
                 <li><a href="#/private/profil" class="grey-text text-lighten-1">{{user.firstname}} {{user.name}}</li>
             </ul>
             
-        </div>
-        <form class="left s12">
-            <div class="input-field  red">
-                <input id="search" type="search" required>
-                <label for="search"><i class="mdi-action-search"></i></label>
-                <i class="mdi-navigation-close"></i>
-            </div>
-        </form>
+            <a href="#" data-activates="nav-mobile" class="button-collapse grey-text text-lighten-1"><i class="mdi-navigation-menu left"></i></a>
+
+            <ul id="nav-mobile" class="side-nav grey">
+                <li><a href="#/private/" class="white-text light"><i class="fa fa-home left"></i>{{'headerMenu.dashboard' | translate }}</a></li>
+                <li><a href="#/private/" class="white-text light"><i class="fa fa-envelope left"></i>{{'headerMenu.notification' | translate }}</a></li>
+                <li><a href="#/private/" class="white-text light"><i class="fa fa-bar-chart left"></i>{{'headerMenu.stats' | translate }}</a></li>
+                <li><a href="#/private/" class="white-text light"><i class="mdi-social-people left"></i>{{'headerMenu.effective' | translate }}</a></li>
+                <li><a href="#/private/" class="white-text light"><i class="mdi-av-timer left"></i>{{'headerMenu.training' | translate }}</a></li>
+                <li><a href="#/private/" class="white-text light"><i class="fa fa-trophy left"></i>{{'headerMenu.championship' | translate }}</a></li>
+                <li><a href="#/private/" class="white-text light"><i class="fa fa-calendar left"></i>{{'headerMenu.calendar' | translate }}</a></li>
+                <li class="divider"></li>
+                <li><a ng-click="logoff()" class="white-text light"><i class="fa fa-power-off left"></i>{{'navbar.disconnect' | translate}}</a></li>
+            </ul>
+        </div>  
     </div>
 </nav>
+
 <!-- Connected second header-->
-<nav class="top-nav grey" role="navigation" ng-show="user">    
-    <div class="container">
-        <div class="nav-wrapper" >
-                
-            <ul class="right hide-on-med-and-down">
-                <li><a ng-click="logoff()"><i class="light fa fa-power-off right"></i></a></li>
-            </ul>
-            <ul class="left hide-on-med-and-down">
-                <li><a href="#/private/profil" class="light"><i class="fa fa-home"></i>{{'headerMenu.dashboard' | translate }}</li>
-            </ul>
-            
-        </div>
-        <a href="#" data-activates="nav-mobile" class="button-collapse grey-text text-lighten-1"><i class="mdi-navigation-menu left"></i></a>
-            
-            <ul id="nav-mobile" class="side-nav">
-                <li><a ng-click="logoff()"><i class="grey-text text-lighten-1 fa fa-power-off"></i></a></li>
-            </ul>
+<nav class="grey hide-on-med-and-down" role="navigation" ng-show="user">    
+    <div class="nav-wrapper center">
+        <ul>
+            <li><a href="#/private/" class="light"><i class="fa fa-home left"></i>{{'headerMenu.dashboard' | translate }}</a></li>
+            <li><a href="#/private/" class="light"><i class="fa fa-envelope left"></i>{{'headerMenu.notification' | translate }}</a></li>
+            <li><a href="#/private/" class="light"><i class="fa fa-bar-chart left"></i>{{'headerMenu.stats' | translate }}</a></li>
+            <li><a href="#/private/" class="light"><i class="mdi-social-people left"></i>{{'headerMenu.effective' | translate }}</a></li>
+            <li><a href="#/private/" class="light"><i class="mdi-av-timer left"></i>{{'headerMenu.training' | translate }}</a></li>
+            <li><a href="#/private/" class="light"><i class="fa fa-trophy left"></i>{{'headerMenu.championship' | translate }}</a></li>
+            <li class="divider"></li>
+            <li><a href="#/private/" class="light"><i class="fa fa-calendar left"></i>{{'headerMenu.calendar' | translate }}</a></li>
+        </ul>
     </div>
 </nav>
-
-
 
 
 <!-- Modal -->
