--- a/src/main/resources/web/templates/public/home.html
+++ b/src/main/resources/web/templates/public/home.html
@@ -110,7 +110,7 @@
 
         <div class="modal-footer">
             <button type="submit" class="waves-effect waves-red btn teal"  translate="popup.buttons.submit"/>
-            <a href="#!" class="modal-action modal-close waves-effect waves-red btn red">{{'popup.buttons.cancel' | translate}}</a>
+            <a href="#/" class="modal-action modal-close waves-effect waves-red btn red">{{'popup.buttons.cancel' | translate}}</a>
         </div>
     </form>
 </div>
