--- a/src/main/resources/web/templates/directives/headerMenu.html
+++ b/src/main/resources/web/templates/directives/headerMenu.html
@@ -66,7 +66,7 @@
         </div>
     </nav>
 </div>
-<div class="navbar-fixed" ng-show="user">
+<div  ng-show="user">
     <!-- Connected second header-->
     <nav class="blue-grey hide-on-med-and-down" role="navigation">
         <div class="container">
