--- a/src/main/resources/web/templates/prive/home.html
+++ b/src/main/resources/web/templates/prive/home.html
@@ -7,16 +7,25 @@
 <div class="row">
     <div class="col s12 m6 l8">
         <!-- Event -->
-        <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-                <span class="card-title">Card Title</span>
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-                <a href='#' class="left waves-effect waves-light white-text"><i class="fa fa-calendar left"></i>{{'headerMenu.calendar' | translate }}</a>
-                
-                <a href='#' class="right"><i class="mdi-navigation-chevron-right right"></i>Suivant</a>
-                <a href="#" class="right"><i class="mdi-navigation-chevron-left left"></i>Précédent</a>
+        <div>
+            <div class="card small teal lighten-2">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="img/office.jpg">
+                    <h5 class="card-title">CRMHB Rennes - USDK Dunkerque</h5>
+                </div>
+                <div class="card-content">
+                    <span class="card-title blue-grey-text text-darken-1">Mercredi 15 avril 2015, à 20h30, Salle arena Brest</span>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title <i class="mdi-navigation-close right"></i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+                <div class="card-action blue-grey lighten-1">
+                    <a href='#' class="left waves-effect waves-light white-text"><i class="fa fa-calendar left"></i>{{'headerMenu.calendar' | translate }}</a>
+
+                    <a href='#' class="right white-text"><i class="mdi-navigation-chevron-right right"></i>Suivant</a>
+                    <a href="#" class="right white-text"><i class="mdi-navigation-chevron-left left"></i>Précédent</a>
+                </div>
             </div>
         </div>
         
@@ -59,90 +68,99 @@
         <ul class="collection">
             <li class="collection-item avatar">
               <img src="img/user.png" alt="" class="circle responsive-img">
-              <span class="title">Title</span>
+              <span class="title blue-grey-text text-lighten-1">Title</span>
               <p>First Line <br>
                  Second Line
               </p>
-              <a href="#!" class="secondary-content"><i class="mdi-action-grade"></i></a>
+              <a href="#!" class="secondary-content btn-floating waves-effect waves-light blue lighten-1"><i class="fa fa-bar-chart"></i></a>
             </li>
             <li class="collection-item avatar">
               <img src="img/user.png" alt="" class="circle responsive-img">
-              <span class="title">Title</span>
+              <span class="title blue-grey-text text-lighten-1">Title</span>
               <p>First Line <br>
                  Second Line
               </p>
-              <a href="#!" class="secondary-content"><i class="mdi-action-grade"></i></a>
+              <a href="#!" class="secondary-content btn-floating waves-effect waves-light blue lighten-1"><i class="fa fa-bar-chart"></i></a>
             </li>
             <li class="collection-item avatar">
               <img src="img/user.png" alt="" class="circle responsive-img">
-              <span class="title">Title</span>
+              <span class="title blue-grey-text text-lighten-1">Title</span>
               <p>First Line <br>
                  Second Line
               </p>
-              <a href="#!" class="secondary-content"><i class="mdi-action-grade"></i></a>
+              <a href="#!" class="secondary-content btn-floating waves-effect waves-light blue lighten-1"><i class="fa fa-bar-chart"></i></a>
             </li>
             <li class="collection-item avatar">
               <img src="img/user.png" alt="" class="circle responsive-img">
-              <span class="title">Title</span>
+              <span class="title blue-grey-text text-lighten-1">Title</span>
               <p>First Line <br>
                  Second Line
               </p>
-              <a href="#!" class="secondary-content"><i class="mdi-action-grade"></i></a>
+              <a href="#!" class="secondary-content btn-floating waves-effect waves-light blue lighten-1"><i class="fa fa-bar-chart"></i></a>
             </li>
             <li class="collection-item avatar">
               <img src="img/user.png" alt="" class="circle responsive-img">
-              <span class="title">Title</span>
+              <span class="title blue-grey-text text-lighten-1">Title</span>
               <p>First Line <br>
                  Second Line
               </p>
-              <a href="#!" class="secondary-content"><i class="mdi-action-grade"></i></a>
+              <a href="#!" class="secondary-content btn-floating waves-effect waves-light blue lighten-1"><i class="fa fa-bar-chart"></i></a>
             </li>
             <li class="collection-item avatar">
               <img src="img/user.png" alt="" class="circle responsive-img">
-              <span class="title">Title</span>
+              <span class="title blue-grey-text text-lighten-1">Title</span>
               <p>First Line <br>
                  Second Line
               </p>
-              <a href="#!" class="secondary-content"><i class="mdi-action-grade"></i></a>
+              <a href="#!" class="secondary-content btn-floating waves-effect waves-light blue lighten-1"><i class="fa fa-bar-chart"></i></a>
             </li>
             <li class="collection-item avatar">
               <img src="img/user.png" alt="" class="circle responsive-img">
-              <span class="title">Title</span>
+              <span class="title blue-grey-text text-lighten-1">Title</span>
               <p>First Line <br>
                  Second Line
               </p>
-              <a href="#!" class="secondary-content"><i class="mdi-action-grade"></i></a>
+              <a href="#!" class="secondary-content btn-floating waves-effect waves-light blue lighten-1"><i class="fa fa-bar-chart"></i></a>
             </li>
             <li class="collection-item avatar">
               <img src="img/user.png" alt="" class="circle responsive-img">
-              <span class="title">Title</span>
+              <span class="title blue-grey-text text-lighten-1">Title</span>
               <p>First Line <br>
                  Second Line
               </p>
-              <a href="#!" class="secondary-content"><i class="mdi-action-grade"></i></a>
-            </li><li class="collection-item avatar">
-              <img src="img/user.png" alt="" class="circle responsive-img">
-              <span class="title">Title</span>
-              <p>First Line <br>
-                 Second Line
-              </p>
-              <a href="#!" class="secondary-content"><i class="mdi-action-grade"></i></a>
+              <a href="#!" class="secondary-content btn-floating waves-effect waves-light blue lighten-1"><i class="fa fa-bar-chart"></i></a>
             </li>
             <li class="collection-item avatar">
               <img src="img/user.png" alt="" class="circle responsive-img">
-              <span class="title">Title</span>
+              <span class="title blue-grey-text text-lighten-1">Title</span>
               <p>First Line <br>
                  Second Line
               </p>
-              <a href="#!" class="secondary-content"><i class="mdi-action-grade"></i></a>
+              <a href="#!" class="secondary-content btn-floating waves-effect waves-light blue lighten-1"><i class="fa fa-bar-chart"></i></a>
             </li>
             <li class="collection-item avatar">
               <img src="img/user.png" alt="" class="circle responsive-img">
-              <span class="title">Title</span>
+              <span class="title blue-grey-text text-lighten-1">Title</span>
               <p>First Line <br>
                  Second Line
               </p>
-              <a href="#!" class="secondary-content"><i class="mdi-action-grade"></i></a>
+              <a href="#!" class="secondary-content btn-floating waves-effect waves-light blue lighten-1"><i class="fa fa-bar-chart"></i></a>
+            </li>
+            <li class="collection-item avatar">
+              <img src="img/user.png" alt="" class="circle responsive-img">
+              <span class="title blue-grey-text text-lighten-1">Title</span>
+              <p>First Line <br>
+                 Second Line
+              </p>
+              <a href="#!" class="secondary-content btn-floating waves-effect waves-light blue lighten-1"><i class="fa fa-bar-chart"></i></a>
+            </li>
+            <li class="collection-item avatar">
+              <img src="img/user.png" alt="" class="circle responsive-img">
+              <span class="title blue-grey-text text-lighten-1">Title</span>
+              <p>First Line <br>
+                 Second Line
+              </p>
+              <a href="#!" class="secondary-content btn-floating waves-effect waves-light blue lighten-1"><i class="fa fa-bar-chart"></i></a>
             </li>
         </ul>
     
