--- a/src/main/resources/web/templates/prive/home.html
+++ b/src/main/resources/web/templates/prive/home.html
@@ -16,13 +16,8 @@
                 <div class="card-content">
                     <span class="card-title blue-grey-text text-darken-1">Mercredi 15 avril 2015, à 20h30, Salle arena Brest</span>
                 </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Card Title <i class="mdi-navigation-close right"></i></span>
-                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                </div>
                 <div class="card-action blue-grey lighten-1">
-                    <a href='#' class="left waves-effect waves-light white-text"><i class="fa fa-calendar left"></i>{{'headerMenu.calendar' | translate }}</a>
-
+                    <a href='#' class="hide-on-med-and-down left waves-effect waves-light white-text"><i class="fa fa-calendar left"></i>{{'headerMenu.calendar' | translate }}</a>
                     <a href='#' class="right white-text"><i class="mdi-navigation-chevron-right right"></i>Suivant</a>
                     <a href="#" class="right white-text"><i class="mdi-navigation-chevron-left left"></i>Précédent</a>
                 </div>
@@ -31,29 +26,29 @@
         
         <!-- Collecte-->
         <div>
-            <div class="card small">
-                <div class="card-image waves-effect waves-block waves-light red lighten-2">
-                    <h5 class="card-title">Stats rencontre CRMHB Rennes - USDK Dunkerque</h5>
+            <div class="card">
+                <div class="waves-effect waves-block waves-light red accent-1">
+                    <h5 class="card-title">&nbsp;&nbsp;<i class="fa fa-bar-chart"></i> CRMHB Rennes - USDK Dunkerque</h5>
                 </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">15/04/2015 <i class="mdi-navigation-more-vert right"></i></span>
-                    <p><a href="#!">Détail</a></p>
+                <div class="card-content grey lighten-3">
+                    <span class="card-title activator blue-grey-text text-darken-1">le 15/04/2015 <i class="mdi-navigation-more-vert right"></i></span>
+                    <p><a href="#!" class="blue-grey-text text-darken-1">Détail</a></p>
                 </div>
                 <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Card Title <i class="mdi-navigation-close right"></i></span>
+                    <span class="card-title blue-grey-text text-darken-1">Card Title <i class="mdi-navigation-close right"></i></span>
                     <p>Here is some more information about this product that is only revealed once clicked on.</p>
                 </div>
             </div>
         </div>
         
         <div>
-            <div class="card small">
-                <div class="card-image waves-effect waves-block waves-light red lighten-2">
-                    <h5 class="card-title">Stats rencontre Chambéry HB - CRMHB Rennes</h5>
+            <div class="card">
+                <div class="waves-effect waves-block waves-light red accent-1">
+                    <h5 class="card-title">&nbsp;&nbsp;<i class="fa fa-bar-chart"></i> Chambéry HB - CRMHB Rennes</h5>
                 </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">08/04/2015 <i class="mdi-navigation-more-vert right"></i></span>
-                    <p><a href="#!">Détail</a></p>
+                <div class="card-content grey lighten-3">
+                    <span class="card-title activator blue-grey-text text-darken-1">le 08/04/2015 <i class="mdi-navigation-more-vert right"></i></span>
+                    <p><a href="#!" class="blue-grey-text text-darken-1">Détail</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Card Title <i class="mdi-navigation-close right"></i></span>
